<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="year"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@color/light_orange"
            android:colorBackground="@color/light_orange"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Base.Theme.TheMeteorLandingApp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/search"
            android:textColor="#ffffff"
            android:textSize="90px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/textViewExplain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:text="@string/explain"
            android:textColor="#ffffff"
            android:textSize="55px"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/editTextYear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSearch" />


        <EditText
            android:id="@+id/editTextYear"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/add"
            android:inputType="text"
            android:textColor="#F78C4B"
            android:textColorHighlight="#F78C4B"
            android:textColorHint="#F78C4B"
            app:boxStrokeColor="#F78C4B"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/imageViewSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.447"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewExplain" />


        <!--
            <Button
                android:id="@+id/buttonAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="300dp"
                android:text="@string/info"
                app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextYear" />
                -->
        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:backgroundTint="#F78C4B"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/imageViewSearch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!--
        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
            -->

        <ImageView
            android:id="@+id/imageViewSearch"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginStart="79dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="88dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextYear"
            app:srcCompat="@drawable/meteor3" />
        <!--
        <Button
            android:id="@+id/buttonRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read"
            app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        -->


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>